# autonomous-driving-tracked-robot

./: .gitignore  README.md
ros2_ws/src/aspn_vn100/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/aspn_vn100/src/: vn100_processing.cpp
ros2_ws/src/gui/: package.xml  setup.py
ros2_ws/src/gui/gui/: motor_tcp_client_controller.py  python_cmd.py  webpage.html  webpage_host.py
ros2_ws/src/lidar_pkg/: package.xml  setup.py
ros2_ws/src/lidar_pkg/lidar_pkg/: ros2_lidar_node.py  scan_to_cloud.py
ros2_ws/src/lidar_pkg/lidar_pkg/sensors/: lidar_sensor.py
ros2_ws/src/lidar_pkg/lidar_pkg/utils/: client_access_manager.py  logger.py
ros2_ws/src/motors/: package.xml  setup.py
ros2_ws/src/motors/motors/: motor_tcp_client_controller.py
ros2_ws/src/robot_control/: package.xml  setup.py
ros2_ws/src/robot_control/robot_control/: motor_node.py  motor_node.yaml
ros2_ws/src/server/: package.xml  setup.py
ros2_ws/src/server/server/: client_access.csv  main.py
ros2_ws/src/server/server/administration/: administration.py
ros2_ws/src/server/server/communication/: udp_sensor_server.py
ros2_ws/src/server/server/controllers/: controller.py  nav2_tcp_server.py  slam_tcp_server.py
ros2_ws/src/server/server/motors/: motor.py  motor_tcp_server.py
ros2_ws/src/slam/: package.xml  setup.py
ros2_ws/src/slam/config/: ekf.yaml  slam_toolbox_params.yaml
ros2_ws/src/xnav2/: package.xml  setup.cfg  setup.py
ros2_ws/src/xnav2/launch/: bringup_launch.py
ros2_ws/src/xnav2/params/: nav2_params.yaml
scripts/launch/: launch_cam.sh  launch_xnav2.sh
utils/: logger.py
(+18 files in other folders)
